# summarizer_personal

./: .env.example  .gitignore  2026-04-12 test2.json  2026-04-12 test2.md  README.md  blog_article_system.txt  config_manager.py  gemini_summarizer.py  hello.py  home_page.html  model_configs.json  model_configs.json~  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_transcript.txt  wrangler.json  youtube_transcript_tool.py
.agent/: rules.md
config/: channels.csv  channels.csv~  investiment_channels.csv  investiment_channels.csv~
data/: backlog.json  missing_transcripts.txt  model_comparison.md  state.json
data/summaries/: -6J20HOVrTs.md  -7Yol5vX5xw.md  -7nfZN2Gl_Q.md  -DosO8fO6_s.md  -EMRe_TeP4s.md  -GBlg9twuzQ.md  -J5kVC1ke7Y.md  -NFqv6mTiPM.md  -NsJVdk4_ik.md  -PijFxZ16uk.md  -RPbxvz6sB8.md  -RnEJc76EO8.md  -XhGZx_TBLw.md  -YGGQJILdeI.md  -ah4ULvWPFU.md  -gjnrMg9iSo.md  -tQGTV8jOts.md  0-uaTGbLpRw.md  01BVYRPzNgs.md  02fx0AyabC0.md  03biTRrdZFU.md  0F0BPiftg8o.md  0JYsLWmz87M.md  0KMAx5u7NyI.md  0OJx_FX4TbI.md  0OhNOqkOijg.md  0Q7BjXmHq8g.md  0V6KAtTHTAM.md  0Vo_fVDRnzY.md  0XOr0u4KZ7Y.md  0emrtCmgCCw.md  0iaS70iP5y4.md  0muTi4FN-0M.md  (+885 more)
scripts/: batch_process.py  batch_process_rss.py  cleanup_short_videos.py  compare_models.py  cron_update.sh  defuddle_utils.py  deploy.sh  extract_descriptions.py  fetch_new_videos.py  kilocode_summarize.sh  manage_backlog.py  process_video.py  process_video.py~  process_video_claude.sh  process_video_gemini.py  repair_metadata.py  rss_fetch.py  text_cleanup.py
(+3540 files in other folders)
